# lpqfilter

./: .gitmodules  CMakeLists.txt  README.md  README.org
benchmarks/: basic_test.cpp  benchmark_utils.hpp  fill_ratio_test.cpp  filter_select.hpp  progression_test.cpp
implementation/: definitions.hpp  handle_wrapper.hpp  utilities.hpp
implementation/base_filter/: bloom_filter_conc.hpp  cqf_wrapper.hpp
implementation/base_filter/nongrouped/: nongrouped_lpfilter_conc.hpp  nongrouped_lpfilter_seq.hpp  nongrouped_qfilter_cell.hpp  nongrouped_qfilter_conc.hpp  nongrouped_qfilter_locking.hpp  nongrouped_qfilter_seq.hpp
implementation/base_filter/standard/: standard_lpfilter_cell.hpp  standard_lpfilter_conc.hpp  standard_lpfilter_seq.hpp  standard_qfilter_cell.hpp  standard_qfilter_conc.hpp  standard_qfilter_locking.hpp  standard_qfilter_seq.hpp
implementation/base_filter/templated/: templated_lpfilter_cell.hpp  templated_lpfilter_conc.hpp  templated_lpfilter_seq.hpp  templated_qfilter_cell.hpp  templated_qfilter_conc.hpp  templated_qfilter_locking.hpp  templated_qfilter_seq.hpp
implementation/composite_filter/: dynamic_qfilter.hpp  growing_qfilter.hpp
implementation/reclamation_strategies/: delayed_reclamation.hpp  hazard_reclamation.hpp  seq_reclamation.hpp
utils/: default_hash.h  utilities.h
utils/hash/: crc_hash.h  murmur2_hash.h
utils_replaced/: commandline.h  definitions.h  mark_pointer.h  pin.h  quotient_filter_type_traits.h  test_coordination.h
utils_replaced/hash/: murmur3_hash.h  xx_hash.h
